@@ -219,9 +219,8 @@
 
   (with-test-prefix "duplicate bindings"
 
-    (pass-if-exception "(let* ((x 1) (x 2)) x)"
-      exception:duplicate-bindings
-      (let* ((x 1) (x 2)) x))))
+    (pass-if "(let* ((x 1) (x 2)) x)"
+      (let* ((x 1) (x 2)) #t))))
 
 (with-test-prefix "letrec"
 
